--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "appwrite": "^14.0.1",
     "google-fonts": "^1.0.0",
     "nuxt": "^3.12.3",
     "vue": "latest"
