--- a/package.json
+++ b/package.json
@@ -10,13 +10,22 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxtjs/tailwindcss": "^6.12.1",
-    "google-fonts": "^1.0.0",
-    "nuxt": "^3.12.3",
-    "vue": "latest"
+    "@nuxt/fonts": "^0.11.0",
+    "@nuxt/icon": "^1.11.0",
+    "@nuxt/image": "^1.10.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.483.0",
+    "nuxt": "^3.16.1",
+    "reka-ui": "^2.1.0",
+    "shadcn-nuxt": "^1.0.3",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "daisyui": "^4.12.10",
-    "sass": "^1.77.8"
+    "@nuxtjs/tailwindcss": "^6.13.2",
+    "typescript": "^5.8.2"
   }
 }
