--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.483.0",
     "nuxt": "^3.16.1",
+    "nuxt-mcp": "^0.1.2",
     "reka-ui": "^2.1.0",
     "shadcn-nuxt": "^1.0.3",
     "tailwind-merge": "^3.0.2",
